# screensavers

mylib/: ColorMap.cpp  ColorMap.h  ConstantFps.h  LookupTable.h  MovingValue.h  Semaphore.h  SimpleProfiler.h  ThreadPool.cpp  ThreadPool.h  filesystem_utils.cpp  filesystem_utils.h  fps.cpp  fps.h  image_utils.cpp  image_utils.h  shader_utils.cpp  shader_utils.h  small_utils.cpp  small_utils.h
programs/fractal/: Makefile  fractal.cpp  main.cpp  release.sh
programs/fractal_flame/: CMakeLists.txt  FlameParameters.cpp  FlameParameters.h  FractalFlame.cpp  FractalFlame.h  FractalFlame2.cpp  FractalFlame2.h  FractalFlameAlgorithm.cpp  FractalFlameAlgorithm.h  FractalFlameFunctions.cpp  FractalPoolData.h  FractalThreadController.cpp  FractalThreadController.h  FractalThreadPoolController.cpp  FractalThreadPoolController.h  Function.h  FunctionNew.h  ImageUtils.cpp  ImageUtils.h  Makefile  Point.h  RenderParameters.h  ScreensaverAutomat.cpp  ScreensaverAutomat.h  ScreensaverAutomatMt.h  ScreensaverAutomatPool.cpp  ScreensaverAutomatPool.h  Variation.cpp  Variation.h  filesystem_utils.cpp  filesystem_utils.h  flame_fractal.cpp  flame_fractal.h  init_functions.cpp  init_functions.h  main.cpp  render.py  render.sh
programs/fractal_flame/android_ndk/jni/: Android.mk  Application.mk  JavaInterface.cpp  build.sh
programs/fractal_flame/fractals/: ball.xml  crystal.xml  flower.xml  lightning.xml  pea.xml  swallow.xml  wave.xml  wing.xml  x.xml
programs/fractal_flame_android/app/: build.gradle  proguard-rules.pro
programs/fractal_flame_android/app/src/androidTest/java/screensavers/fractalflame/: ApplicationTest.java
programs/fractal_flame_android/app/src/main/: AndroidManifest.xml
programs/fractal_flame_android/app/src/main/java/screensavers/fractalflame/: FractalFlame.java  FractalFlameView.java  MainActivity.java
programs/fractal_flame_android/app/src/main/res/values/: strings.xml
programs/fractal_flame_android/gradle/wrapper/: gradle-wrapper.properties
programs/fractal_flame_ui/: fractal_flame_ui.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
programs/fractal_flame_web/: fractal_flame.cgi  fractal_flame.py  fractal_flame.wsgi  settings.py
programs/fractal_flame_web/templates/: flame.html
programs/fractal_glsl/: Makefile  fractal_glsl.cpp  julia.glsl  sky.glsl
programs/hilbert/: Makefile  const_fps.h  entry2.cpp  hilbert2d.h  hilbert2d_gl.h  hilbert3d_gl.h  release.sh
programs/hilbert2/: Hilbert2D.h  Hilbert3D.h  Matrix.h  build.sh  build_emscripten.sh  hilbert.cpp  hilbert2d_console.cpp  template.html  template3d.html
programs/hilbert2_glsl/: build.sh  hilbert2_glsl.cpp
programs/julia_cuda/: CudaFractal.cu  CudaFractal.h  Makefile  main.cpp
programs/julia_opencl/: Makefile  julia.cl  julia_opencl.cpp  julia_opencl.h  main.cpp
programs/julia_webgl/: julia.html
programs/model/: build.sh  model.cpp
programs/tube/: LookAt.cpp  Makefile  build_emscripten.sh  build_linux.sh  main.cpp  release.sh  template.html  tube.cpp
programs/wave_webgl/: wave.html
